// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TimelineHeader > should not render title text when collapsed 1`] = `
<div
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "gap": "8px",
    }
  }
>
  <span
    className="timeline-icon"
    data-icon-name="TimelineRegular"
  />
</div>
`;

exports[`TimelineHeader > should render when collapsed 1`] = `
<div
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "gap": "8px",
    }
  }
>
  <span
    className="timeline-icon"
    data-icon-name="TimelineRegular"
  />
</div>
`;

exports[`TimelineHeader > should render with default props when expanded 1`] = `
<div
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "gap": "8px",
      "minWidth": "200px",
    }
  }
>
  <span
    className="timeline-icon"
    data-icon-name="TimelineRegular"
  />
  <span
    className="fui-Text ___g0or4u0_dhwpsw0 fk6fouc fkhj508 f1i3iumi fl43uef fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
    style={
      {
        "flexGrow": 1,
      }
    }
  >
    Task timeline
  </span>
  <button
    className="fui-Button r1alrhcs ___18vzs3l_jbqu760 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f44lkw9 f1062rbf f18ktai2 fwbmr0d f44c6la"
    onClick={[Function]}
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2"
    >
      <span
        data-testid="fluent-icon"
      />
    </span>
  </button>
</div>
`;
